added three pages more

--- a/eventshow.html
+++ b/eventshow.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>DR FISH GLOBAL INVESTMENT LIMITED - Events</title>
+  <title>DR FISH GLOBAL INVESTMENT LIMITED - Events - Show</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -154,90 +154,73 @@
 
     <main>
 
-        <div class="other-banners">
-          <div class="container">
-            <div class="row">
-                <div class="col-md-6 mx-auto text-center text-poppins">
-                    <h1 class="text-white wow" id="banner-head" data-wow-duration="2000">Events</h1>
-                    <p class="wow" id="banner-text" data-wow-duration="2000" data-wow-delay="0.3s"><a href="index.html" class="text-decoration-none"><i class="fa fa-home"></i> Home</a> <span class="text-white"><i class="la la-long-arrow-right"></i> Events</span></p>
-                </div>
-            </div>
-          </div>
-        </div>
-
-        <section class="events-area container">
-
-            <div align="center" class="hover-header">
-                <h2 class="text-uppercase text-oswald">Events</h2>
-                <div class="head-bot"></div>
-            </div>
+        <section class="event-show-area container no-banner">
 
             <div class="row">
-                <div class="col-lg-6 mt-4">
-                 <a href="#un" class="text-decoration-none">
-                  <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                    <div class="row">
-                    <div class="col-sm-5">
-                        <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                    </div>
-                    <div class="col-sm-7 mt-sm-0 mt-4">
-                        <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                        <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                    </div>
+                <div class="col-lg-9">
+                    <h3 class="text-poppins text-uppercase">Event Title for here Lorem Ispum event details</h3>
+                    <div class="my-3 event-info">
+                    <h6 class="text-opensans"><span class="text-green font-600"><i class="fa fa-calendar"></i> Date :</span> 27th May 2023</h6>
+                    <h6 class="text-opensans"><span class="text-green font-600"><i class="far fa-clock"></i> Time :</span> 2:00 pm</h6>
+                    <h6 class="text-opensans"><span class="text-green font-600"><i class="fas fa-map-marker-alt"></i> Venue :</span> Rayfield Jos, Plateau State.</h6>
                    </div>
-                  </div>
-                </a>
+                   <img src="img/event-pic.jpg" alt="event-pic" class="img img-event">
+
+                   <div class="eventshow-desc mt-4 text-grey">
+                      <p>This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details. There are lots more to know about Dr Fish Events but we just want to give you a glipms here.</p>
+                   </div>
+
                 </div>
 
-                <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                       </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
+                <div class="col-lg-3 mt-lg-0 mt-4">
 
-                   <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
+                    <div class="search-area">
+                        <div class="search-header">
+                         <h6 class="text-montserrat text-uppercase font-600">Search Event</h6>
+                         <div class="search-bot"></div>
                        </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
-
-                   <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                       </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
-            </div>
     
+                       <form action="" method="get">
+                        <div class="form-group mt-3">
+                          <input type="search" name="event" id="event" placeholder="Search Here..." class="form-control form-control-lg search-control">
+                        </div>
+                        <div class="form-group mt-3">
+                          <div class="d-grid">
+                            <button type="submit" class="btn btn-search text-uppercase"><i class="fa fa-search"></i> Search</button>
+                          </div>
+                        </div>
+                       </form>
+                      </div>
+
+                      <div class="more-area mt-4">
+
+                        <div class="search-header">
+                            <h6 class="text-montserrat text-uppercase font-600">More Events</h6>
+                            <div class="search-bot"></div>
+                        </div>
+
+                        <div class="more-content text-poppins">
+                            <a href="#un" class="text-decoration-none">
+                            <img src="img/event-pic.jpg" alt="event-pic" class="img img-more">
+                            <h5 class="more-header text-uppercase text-green mt-2">Event Title for here Lorem Ispum event details</h5>
+                            <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
+                           </a>
+                        </div>
+
+                        <div class="more-content text-poppins">
+                            <a href="#un" class="text-decoration-none">
+                            <img src="img/event-pic.jpg" alt="event-pic" class="img img-more">
+                            <h5 class="more-header text-uppercase text-green mt-2">Event Title for here Lorem Ispum event details</h5>
+                            <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
+                           </a>
+                        </div>
+
+                      </div>
+
+                </div>
+
+            </div>
+
         </section>
 
         <section></section>
