--- a/gallery.html
+++ b/gallery.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>DR FISH GLOBAL INVESTMENT LIMITED - Events</title>
+  <title>DR FISH GLOBAL INVESTMENT LIMITED - Gallery</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -106,13 +106,13 @@
                           <a class="dropdown-item" href="#">Category 2</a>
                       </div>
                   </li> -->
-                  <li class="nav-item active">
+                  <li class="nav-item">
                       <a class="nav-link" href="events.html">Events</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item active">
                       <a class="nav-link" href="gallery.html">Gallery</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
@@ -158,8 +158,8 @@
           <div class="container">
             <div class="row">
                 <div class="col-md-6 mx-auto text-center text-poppins">
-                    <h1 class="text-white wow" id="banner-head" data-wow-duration="2000">Events</h1>
-                    <p class="wow" id="banner-text" data-wow-duration="2000" data-wow-delay="0.3s"><a href="index.html" class="text-decoration-none"><i class="fa fa-home"></i> Home</a> <span class="text-white"><i class="la la-long-arrow-right"></i> Events</span></p>
+                    <h1 class="text-white wow" id="banner-head" data-wow-duration="2000">Gallery</h1>
+                    <p class="wow" id="banner-text" data-wow-duration="2000" data-wow-delay="0.3s"><a href="index.html" class="text-decoration-none"><i class="fa fa-home"></i> Home</a> <span class="text-white"><i class="la la-long-arrow-right"></i> Gallery</span></p>
                 </div>
             </div>
           </div>
@@ -168,74 +168,41 @@
         <section class="events-area container">
 
             <div align="center" class="hover-header">
-                <h2 class="text-uppercase text-oswald">Events</h2>
+                <h2 class="text-uppercase text-oswald">Gallery</h2>
                 <div class="head-bot"></div>
             </div>
 
             <div class="row">
-                <div class="col-lg-6 mt-4">
-                 <a href="#un" class="text-decoration-none">
-                  <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                    <div class="row">
-                    <div class="col-sm-5">
-                        <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                    </div>
-                    <div class="col-sm-7 mt-sm-0 mt-4">
-                        <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                        <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                    </div>
-                   </div>
-                  </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                <a href="img/trip-1.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                  <img src="img/trip-1.jpg" alt="trip-1" class="img img-fluid">
                 </a>
                 </div>
-
-                <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                       </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
-
-                   <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                       </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
-
-                   <div class="col-lg-6 mt-4">
-                    <a href="#un" class="text-decoration-none">
-                     <div class="event-item text-poppins wow fadeIn" data-wow-duration="2000">
-                       <div class="row">
-                       <div class="col-sm-5">
-                           <img src="img/event-pic.jpg" alt="event-pic" class="img img-fluid">
-                       </div>
-                       <div class="col-sm-7 mt-sm-0 mt-4">
-                           <h5 class="event-header text-uppercase text-green">Event Title for here Lorem Ispum event details</h5>
-                           <div class="event-desc">This text I'm writing right now illustrates a breif description of this event. Hover and Click this to see full details.</div>
-                       </div>
-                      </div>
-                     </div>
-                   </a>
-                   </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                    <a href="img/trip-2.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                    <img src="img/trip-2.jpg" alt="trip-2" class="img img-fluid">
+                </a>
+                </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                    <a href="img/trip-3.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                    <img src="img/trip-3.jpg" alt="trip-3" class="img img-fluid">
+                </a>
+                </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                    <a href="img/fish-training-1.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                    <img src="img/fish-training-1.jpg" alt="trip-3" class="img img-fluid">
+                </a>
+                </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                    <a href="img/fish-training-2.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                    <img src="img/fish-training-2.jpg" alt="trip-3" class="img img-fluid">
+                </a>
+                </div>
+                <div class="col-md-4 col-sm-6 mt-4 wow fadeInUp" data-wow-duration="1s">
+                    <a href="img/event-pic.jpg" data-fancybox="gallery" data-caption="Projects Successfully held at Sammadecom Nigeria Limited">
+                    <img src="img/event-pic.jpg" alt="trip-3" class="img img-fluid">
+                </a>
+                </div>
             </div>
     
         </section>
