--- a/products.html
+++ b/products.html
@@ -113,13 +113,13 @@
                       </div>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Gallery</a>
+                      <a class="nav-link" href="gallery.html">Gallery</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
