--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@
                           <a class="dropdown-item" href="#">Sales of sweet dry smoke Cat fish, spice, crumbs and omega oil</a>
                       </div> -->
                   </li>
-                  <li class="nav-item dropdown">
+                  <!-- <li class="nav-item dropdown">
                       <a class="nav-link" href="products.html" id="dropdownId2" aria-haspopup="true" aria-expanded="false">Products</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
@@ -105,7 +105,7 @@
                           <a class="dropdown-item" href="#">Category 1</a>
                           <a class="dropdown-item" href="#">Category 2</a>
                       </div>
-                  </li>
+                  </li> -->
                   <li class="nav-item">
                       <a class="nav-link" href="events.html">Events</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
@@ -113,13 +113,13 @@
                       </div>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Gallery</a>
+                      <a class="nav-link" href="gallery.html">Gallery</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="#">Contact</a>
+                      <a class="nav-link" href="contact.html">Contact</a>
                       <div align="center" class="nav-bot-cover d-lg-block d-none">
                           <div class="nav-bot"></div>
                       </div>
@@ -436,7 +436,7 @@
                     <li><a href="#un">Home</a></li>
                     <li><a href="#un">About</a></li>
                     <li><a href="#un">Services</a></li>
-                    <li><a href="#un">Products</a></li>
+                    <!-- <li><a href="#un">Products</a></li> -->
                     <li><a href="#un">Events</a></li>
                     <li><a href="#un">Gallery</a></li>
                     <li><a href="#un">Contact</a></li>
