--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
             <div class="col-md-6">
               <h1 class="text-poppins">About Us</h1>
               <h3 class="text-tiltneon text-uppercase wow fadeInLeft text-green" data-wow-duration="1500">SAMMADECOM NIGERIA LIMITED (DR FISH)</h3>
-              <p class="site-text text-montserrat font-500 wow fadeInLeft" data-wow-duration="1500" data-wow-delay="0.2s">SAMMADECOM NIGERIA LIMITED (DR FISH) is an global business enterprise that deals with the farming(breeding) and sales of fish both in raw and processed forms. This enterprise also deals in the transportation of people and goods from one terminal to another.</p>
+              <p class="site-text text-montserrat font-500 wow fadeInLeft" data-wow-duration="1500" data-wow-delay="0.2s">SAMMADECOM NIGERIA LIMITED (DR FISH) is a global business enterprise that deals with the farming(breeding) and sales of fish both in raw and processed forms. This enterprise also deals in the transportation of people and goods from one terminal to another.</p>
               <p class="site-text text-montserrat font-500 wow fadeInLeft" data-wow-duration="1500" data-wow-delay="0.5s">Over the years we have successfully gained recognition from the state and the country at large by receiving awards of excellence with respect to the standard of services rendered by us.</p>
 
               <a href="#un" class="btn btn-more wow fadeInUp mt-3" data-wow-duration="1500" data-wow-delay="0.8s">More About Us <i class="la la-long-arrow-right" style="font-stretch: ultra-expanded;"></i></a>
@@ -275,10 +275,10 @@
                     <div class="py-4">
                     <h1 class="text-center dr-text text-pacifico mb-3">Meet Dr Fish</h1>
                     <p class="text-white">
-                        Mr Adedunji Samuel Oluwaseun Oluwaseyi Adebanjo, arpn,f. dss (Dr. Fish) was born in the late seventies at Iyeku Odo-otin Osun State.
+                        Mr Adetunji Samuel Oluwaseun Oluwaseyi Adebanjo, arpn, f.dss (Dr. Fish) was born in the late seventies at Iyeku Odo-otin Osun State.
                         He is a livestock management consultant per excellence with over ten years of contributing to the nations's food security and human empowerment through aquaculture precisely fish farming and management.
-                        Organizing adequate empowerment programs and seminars for locals of northern Nigeria and also creating rooms for investment plans for organizations and individuals.
-                        He positively influenced the fish market on all angels of aquaculture, with no doubt a people person, passionate teacher, creative and ready to share knowledge thereby developing other; a determined goal better.
+                        Organizing adequate empowerment programs and seminars for locals of northern Nigeria and also creating rooms for investment platforms for organizations and individuals.
+                        He positively influenced the fish market on all angles of aquaculture, with no doubt a people person, passionate teacher, creative and ready to share knowledge thereby developing other; a determined goal better.
                         He has never for once relented in giving back to the society through humanitarian services.
                     </p>
 
